--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -7,6 +7,8 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  schedule:
+    - cron:  '15 0 * * *' # every 00:15
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
