--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron:  '15 0 * * *' # every 00:15
+    - cron:  '15 16 * * *' # every 00:15 @China
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
