--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -1,31 +1,20 @@
 name: metric
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
   schedule:
-    - cron:  '15 16 * * *' # every 00:15 @China
-
-  # Allows you to run this workflow manually from the Actions tab
+    - cron: '15 * * * *' # every 00:15
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-      # See action.yml for all options
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
           token: ${{ secrets.METRICS_TOKEN }}
-          # GITHUB_TOKEN is a special auto-generated token restricted to current repository, which is used to push files in it
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          # committer_token: ${{ github.token }}
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
-
+          plugin_languages: yes
+          plugin_habits: yes
