--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -14,7 +14,8 @@ jobs:
       - uses: lowlighter/metrics@latest
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          config_timezone: Asia/Shanghai
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year
-          plugin_languages: yes
+          # plugin_languages: yes
           plugin_habits: yes
