--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -19,3 +19,5 @@ jobs:
           plugin_isocalendar_duration: full-year
           # plugin_languages: yes
           plugin_habits: yes
+          plugin_lines: yes
+          # plugin_traffic: yes
